tests/ui/negative.stderr
error[E0600]: cannot apply unary operator `-` to type `u32`
  --> tests/ui/negative.rs:22:9
   |
22 |     B = -1,
   |         ^
   |         |
   |         cannot apply unary operator `-`
   |         help: you may have meant the maximum value of `u32`: `u32::MAX`
   |
   = note: unsigned values cannot be negated
